# Django_DRF

./: Dockerfile  docker-compose.yaml  example.env  groups.json  pyproject.toml  services.py
config/: settings.py  urls.py
lms/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  vaidators.py  views.py
lms/management/commands/: cgm.py  csu.py  fill.py
lms/migrations/: 0001_initial.py  0002_alter_course_preview.py  0003_alter_lesson_preview.py  0004_course_owner.py  0005_alter_lesson_name.py  0006_alter_course_owner.py  0007_lesson_owner.py  0008_remove_lesson_owner.py  0009_lesson_owner.py  0010_subscriptions.py  0011_course_stripe_id.py  0012_course_price_alter_course_stripe_id.py  0013_alter_course_price_alter_course_stripe_id.py  0014_alter_course_price_alter_course_stripe_id.py  0015_alter_course_price_alter_course_stripe_id.py  0016_alter_course_price_alter_course_stripe_id.py  0017_alter_course_price_alter_course_stripe_id.py  0018_alter_course_price_alter_course_stripe_id.py  0019_alter_course_price_alter_course_stripe_id.py  0020_alter_course_price_alter_course_stripe_id.py  0021_alter_course_price_alter_course_stripe_id.py  0022_alter_course_price_alter_course_stripe_id.py
users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_city_and_more.py  0003_payments.py  0004_alter_payments_payment_method.py  0005_alter_payments_options_alter_user_options.py  0006_remove_payments_payment_amount_and_more.py
